# satellite-tracker

./: .gitignore  README.md  render.yaml
backend/: main.py  requirements.txt
cpp/: CMakeLists.txt  bindings.cpp  build.ps1  build.sh  sgp4.cpp  sgp4.h
frontend/: copy-cesium.js  package-lock.json  package.json  vite.config.js
frontend/api/: tle.js
frontend/api/tle/: [group].js
frontend/public/: sgp4.js  sgp4.wasm
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/components/: Globe.jsx  GroupSelector.jsx  StatsPanel.jsx
frontend/src/wasm/: propagator.js
